# data-science-mcp-server

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  pytest.ini  requirements.txt
src/: __main__.py  server.py
src/resources/: __init__.py
src/tools/: __init__.py  api_client.py  base.py  data_transformation.py  data_validation.py  file_operations.py  registry.py  schema_introspection.py  tool_chaining.py  visualization.py
src/utils/: __init__.py  decorators.py  helpers.py  logging.py
tests/tools/: test_api_client.py  test_data_transformation.py  test_data_validation.py  test_file_operations.py  test_visualization.py
